# Drone_Detection

./: .gitignore  README.md  pyproject.toml  requirement.txt  streamlit_main.py
rtdetrv2/tools/: infer.py
src/: inference.py  inference_backend.py  inference_torch.py  inference_trt.py  main.py  stream.py  test.py
src/configs/rtv4/: rtv4_hgnetv2_s_coco.yml
src/engine/rtv4/: dfine_decoder.py  hybrid_encoder.py  postprocessor.py  rtdetrv2_decoder.py
src/lang/: en.json  zh.json
src/rtdetrv2/tools/: infer.py
src/tools/: export_onnx.py
