[project]
name = "drone-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "calflops>=0.3.2",
    "faster-coco-eval>=1.7.2",
    "flet>=0.85.2",
    "flet-video>=0.85.2",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
    "onnxsim>=0.6.4",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.1",
    "transformers>=5.10.2",
]

[tool.flet]
app.module = "main" # --module-name
app.path = "src" # path to Python app relative to `pyproject.toml`

compile.app = false # --compile-app
compile.packages = false # --compile-packages
compile.cleanup = false # --cleanup-on-compile
